src/objects/LDC_Vendor__c.object
<CustomObject>
    <description>Utility Vendor for LDC</description>
    <fields>
        <fullName>Active__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Active</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>City__c</fullName>
        <label>City</label>
        <length>165</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Country__c</fullName>
        <label>Country</label>
        <length>20</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>County__c</fullName>
        <label>County</label>
        <length>165</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>DUNS__c</fullName>
        <description>Utility vendor DUNS</description>
        <label>DUNS</label>
        <length>12</length>
        <required>true</required>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Legacy_ID__c</fullName>
        <externalId>true</externalId>
        <label>Legacy ID</label>
        <length>20</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Orientation__c</fullName>
        <label>Orientation</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>External</fullName>
                </value>
                <value>
                    <fullName>Internal</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Phone_Number__c</fullName>
        <label>Phone Number</label>
        <type>Phone</type>
    </fields>
    <fields>
        <fullName>Postal_Code__c</fullName>
        <label>Postal Code</label>
        <length>165</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Recipient_Name__c</fullName>
        <label>Recipient Name</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>ESG</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Reciptent_DUNS__c</fullName>
        <label>Reciptent DUNS</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>49050839</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Service_State__c</fullName>
        <label>Service State</label>
        <required>true</required>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>AK         </fullName>
                </value>
                <value>
                    <fullName>AL          </fullName>
                </value>
                <value>
                    <fullName>AR         </fullName>
                </value>
                <value>
                    <fullName>AZ          </fullName>
                </value>
                <value>
                    <fullName>CA         </fullName>
                </value>
                <value>
                    <fullName>CO         </fullName>
                </value>
                <value>
                    <fullName>CT          </fullName>
                </value>
                <value>
                    <fullName>DC         </fullName>
                </value>
                <value>
                    <fullName>DE          </fullName>
                </value>
                <value>
                    <fullName>FL           </fullName>
                </value>
                <value>
                    <fullName>GA         </fullName>
                </value>
                <value>
                    <fullName>HI           </fullName>
                </value>
                <value>
                    <fullName>IA           </fullName>
                </value>
                <value>
                    <fullName>ID           </fullName>
                </value>
                <value>
                    <fullName>IL</fullName>
                </value>
                <value>
                    <fullName>IN          </fullName>
                </value>
                <value>
                    <fullName>KS          </fullName>
                </value>
                <value>
                    <fullName>KY          </fullName>
                </value>
                <value>
                    <fullName>LA          </fullName>
                </value>
                <value>
                    <fullName>MA        </fullName>
                </value>
                <value>
                    <fullName>MD        </fullName>
                </value>
                <value>
                    <fullName>ME         </fullName>
                </value>
                <value>
                    <fullName>MI          </fullName>
                </value>
                <value>
                    <fullName>MN        </fullName>
                </value>
                <value>
                    <fullName>MO        </fullName>
                </value>
                <value>
                    <fullName>MS         </fullName>
                </value>
                <value>
                    <fullName>MT         </fullName>
                </value>
                <value>
                    <fullName>NC         </fullName>
                </value>
                <value>
                    <fullName>ND         </fullName>
                </value>
                <value>
                    <fullName>NE         </fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Service_Territory__c</fullName>
        <label>Service Territory</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetName>Service_Territory</valueSetName>
        </valueSet>
    </fields>
    <fields>
        <fullName>State__c</fullName>
        <label>State</label>
        <length>165</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Street_1__c</fullName>
        <label>Street 1</label>
        <length>165</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Street_2__c</fullName>
        <label>Street 2</label>
        <length>165</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Time_Zone__c</fullName>
        <description>Field needed for EDI integration.</description>
        <label>Time Zone</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>CST</fullName>
                </value>
                <value>
                    <fullName>EST</fullName>
                </value>
                <value>
                    <fullName>MST</fullName>
                </value>
                <value>
                    <fullName>PST</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Utility_Code__c</fullName>
        <label>Utility Code</label>
        <length>20</length>
        <required>true</required>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Vendor_Type__c</fullName>
        <description>Types of LDC Vendor</description>
        <label>Vendor Type</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>ESP</fullName>
                </value>
                <value>
                    <fullName>LDC</fullName>
                </value>
                <value>
                    <fullName>MDMA</fullName>
                </value>
                <value>
                    <fullName>Meter Installer</fullName>
                </value>
                <value>
                    <fullName>Meter Owner</fullName>
                </value>
                <value>
                    <fullName>Meter Reader</fullName>
                </value>
                <value>
                    <fullName>MSP</fullName>
                </value>
                <value>
                    <fullName>Registration Agent</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <label>LDC Vendor</label>
    <nameField>
        <label>LDC Vendor Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>LDC Vendors</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
    <validationRules>
        <fullName>Service_Territory_Required</fullName>
        <active>true</active>
        <errorConditionFormula>AND( ISBLANK(TEXT( Service_Territory__c )))</errorConditionFormula>
        <errorDisplayField>Service_Territory__c</errorDisplayField>
        <errorMessage>Service Territory is required</errorMessage>
    </validationRules>
</CustomObject>